fixture cards grid gap created

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ strong {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: auto;
-    grid-gap: 2rem;
+    grid-gap: 3rem;
     margin-bottom: 10px;
     margin-top: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
